# Ready_ant_server

./: .gitignore  README.md  game_engine.js  index.html  package-lock.json  package.json  server.js  test.js
Ant-simulation-backend/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  secret_data copy.env  secret_db copy.env
Ant-simulation-backend/ant_rust_backend_lib/: Cargo.toml
Ant-simulation-backend/ant_rust_backend_lib/src/data/: access_check.json  mod.rs
Ant-simulation-backend/ant_rust_backend_lib/src/data/handle_req/: change_access_request.rs  handle_request.rs  mod.rs
Ant-simulation-backend/handle_get_user_data_req/: Cargo.toml  Dockerfile
Ant-simulation-backend/handle_get_user_data_req/src/: main.rs
Ant-simulation-backend/handle_post_del_friend_req/: Cargo.toml  Dockerfile
Ant-simulation-backend/handle_post_del_friend_req/src/: main.rs
Ant-simulation-backend/handle_put_del_user_data_req/: Cargo.toml  Dockerfile
Ant-simulation-backend/handle_put_del_user_data_req/src/: main.rs
Ant-simulation-backend/handle_signin_req/: Cargo.toml  Dockerfile
Ant-simulation-backend/handle_signin_req/src/: main.rs
Ant-simulation-backend/handle_signup_req/: Cargo.toml  Dockerfile
Ant-simulation-backend/handle_signup_req/src/: main.rs
Ant-simulation-backend/rust_runner/: Cargo.toml  Dockerfile
Ant-simulation-backend/rust_runner/src/: main.rs
Ant-simulation-backend/src/: main.rs
Ant-simulation-backend/src/data/: mod.rs
Ant-simulation-backend/src/data/handle_request/: add_friend_request.rs  delete_friend_request.rs  delete_request.rs  get_request.rs  mod.rs  put_request.rs  sign_in_request.rs  sign_up_request.rs
Ant-simulation-backend/src/data/sql_scripts/: delete_script.rs  mod.rs  select_script.rs
Antgine/: Cargo.toml
Ready_ant_server/: README.md  game_engine.js  (+3 more)
(+102 files in other folders)
