[package]
edition = "2021"
name = "handle_get_user_data_req"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
serde_json = "1.0"
simple_threadpool_func_bio = "0.0.1"
ant_rust_backend_lib = { path = "../ant_rust_backend_lib" }